Closed Bug 1766270 Opened 3 years ago Closed 3 years ago

Android crash in [@ mozilla::a11y::PDocAccessibleChild::SendBatch]

Categories

(Core :: Disability Access APIs, defect)

All
Android
defect

Tracking

()

RESOLVED FIXED
102 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox100 --- wontfix
firefox101 --- fixed
firefox102 --- fixed

People

(Reporter: kbrosnan, Assigned: Jamie)

Details

(Keywords: access, crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/85040fa6-53ce-4fd0-9f20-cc7b40220423

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0 libxul.so mozilla::a11y::PDocAccessibleChild::SendBatch ipc/ipdl/PDocAccessibleChild.cpp:706
1 libxul.so mozilla::a11y::DocAccessibleWrap::CacheViewportCallback accessible/android/DocAccessibleWrap.cpp:156
2 libxul.so nsTimerImpl::Fire xpcom/threads/nsTimerImpl.cpp:659
3 libxul.so nsTimerEvent::Run xpcom/threads/TimerThread.cpp:265
4 libxul.so mozilla::RunnableTask::Run xpcom/threads/TaskController.cpp:467
5 libxul.so mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:770
6 libxul.so NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:467
7 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:107
8 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:306
9 libxul.so nsBaseAppShell::Run widget/nsBaseAppShell.cpp:137
Keywords: access
Severity: S2 → --
Component: General → Disability Access APIs
Product: GeckoView → Core
Hardware: Unspecified → All
Summary: Crash in [@ mozilla::a11y::PDocAccessibleChild::SendBatch] → Android crash in [@ mozilla::a11y::PDocAccessibleChild::SendBatch]

Probably null mIPCDoc. Maybe the actor got destroyed before the document did (shutdown, perhaps)? Null checking mIPCDoc seems reasonable enough.

S3'ing this because the volume doesn't seem terribly high

Severity: -- → S3
Assignee: nobody → jteh
Status: NEW → ASSIGNED
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e1ca4b384a61 Null check IPCDoc() in Android DocAccessibleWrap::CacheViewportCallback. r=eeejay
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch

The patch landed in nightly and beta is affected.
:Jamie, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jteh)

Comment on attachment 9275662 [details]
Bug 1766270: Null check IPCDoc() in Android DocAccessibleWrap::CacheViewportCallback.

Beta/Release Uplift Approval Request

  • User impact if declined: Crashes.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple null check.
  • String changes made/needed:
  • Is Android affected?: Yes
Flags: needinfo?(jteh)
Attachment #9275662 - Flags: approval-mozilla-beta?

Comment on attachment 9275662 [details]
Bug 1766270: Null check IPCDoc() in Android DocAccessibleWrap::CacheViewportCallback.

Approved for 101.0b6.

Attachment #9275662 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: