Bug 1766270: Null check IPCDoc() in Android DocAccessibleWrap::CacheViewportCallback. r=eeejay, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D145847